Se creó con Colab

--- a/Correlación_entre_variables_(análisis_bivariado).ipynb
+++ b/Correlación_entre_variables_(análisis_bivariado).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMKybMdzZDkbxW/cWo4UrLw",
+      "authorship_tag": "ABX9TyMFc7TXUakhuVKdU+YIPMkD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,9 @@
         "|--------|--------|--------|--------|\n",
         "|Fuma (Sí)|65|5|__70__|\n",
         "Fuma (No)|5|25|__30__|\n",
-        "|__Total__|__70__|__30__|__100__|\n"
+        "|__Total__|__70__|__30__|__100__|\n",
+        "\n",
+        "<br />"
       ],
       "metadata": {
         "id": "h5Axp9eYi6Xc"
