Se creó con Colab

--- a/Correlación_entre_variables_(análisis_bivariado).ipynb
+++ b/Correlación_entre_variables_(análisis_bivariado).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMFc7TXUakhuVKdU+YIPMkD",
+      "authorship_tag": "ABX9TyMhs/mzAIfHQYM7sK6TM/h7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,11 +60,12 @@
         "\n",
         "|Fuma|Enfermedad cardíaca (Sí)|Enfermedad cardíaca (No)|Total|\n",
         "|--------|--------|--------|--------|\n",
-        "|Fuma (Sí)|65|5|__70__|\n",
-        "Fuma (No)|5|25|__30__|\n",
-        "|__Total__|__70__|__30__|__100__|\n",
+        "|Fuma (Sí)|65|5|70|\n",
+        "Fuma (No)|5|25|30|\n",
+        "|**Total**|70|30|100|\n",
         "\n",
-        "<br />"
+        "<br />\n",
+        "A continuación, vemos el cálculo en una celda de código de Python:"
       ],
       "metadata": {
         "id": "h5Axp9eYi6Xc"
