Se creó con Colab

--- a/Correlación_entre_variables_(análisis_bivariado).ipynb
+++ b/Correlación_entre_variables_(análisis_bivariado).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMhs/mzAIfHQYM7sK6TM/h7",
+      "authorship_tag": "ABX9TyOoGtBXMrqVrJPBoscZi2eH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,14 +58,11 @@
         "Tomemos un ejemplo respecto a personas para las cuales tenemos dos atributos: si son fumadoras y si poseen enfermedades cardíacas:\n",
         "<br />\n",
         "\n",
-        "|Fuma|Enfermedad cardíaca (Sí)|Enfermedad cardíaca (No)|Total|\n",
-        "|--------|--------|--------|--------|\n",
-        "|Fuma (Sí)|65|5|70|\n",
-        "Fuma (No)|5|25|30|\n",
-        "|**Total**|70|30|100|\n",
-        "\n",
-        "<br />\n",
-        "A continuación, vemos el cálculo en una celda de código de Python:"
+        "| Fuma      | Enfermedad cardíaca (Sí) | Enfermedad cardíaca (No) | Total |\n",
+        "|-----------|--------------------------|--------------------------|-------|\n",
+        "| Fuma (Sí) | 65                       | 5                        | 70    |\n",
+        "| Fuma (No) | 5                        | 25                       | 30    |\n",
+        "| **Total** | 70                       | 30                       | 100   |\n"
       ],
       "metadata": {
         "id": "h5Axp9eYi6Xc"
