--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3Txo8vzOdca0o4amXOsDA",
+      "authorship_tag": "ABX9TyNYG4XyT9a32NN1o7zHuj7w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,25 @@
       "source": [
         "# Métodos de ensamble: Stacking\n",
         "\n",
-        "En esta notebook implementamos un pequeño ejemplo de utilización de métodos de ensamble mediante la estrategia de _stacking_."
+        "En esta notebook implementamos un pequeño ejemplo de utilización de métodos de ensamble mediante la estrategia de _stacking_, donde hay un conjunto de modelos independientes que aprenden de los datos y luego un _meta-modelo_ que aprende a partir de las predicciones de los modelos independientes, lo cual se ilustra en el siguiente esquema:\n",
+        "\n",
+        "<br/>\n",
+        "\n",
+        "<img src=\"https://editor.analyticsvidhya.com/uploads/39725Stacking.png\" alt=\"Esquema stacking general\" width=\"500\">\n"
       ],
       "metadata": {
         "id": "aFKz4eT-e5LQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "En esta notebook vamos a trabajar con el siguiente esquema de stacking:\n",
+        "\n",
+        "<img src=\"https://editor.analyticsvidhya.com/uploads/70978Stacking%201.png\" alt=\"Esquema actual\" width=\"500\">\n"
+      ],
+      "metadata": {
+        "id": "f6AgOCQuWbaW"
       }
     },
     {
@@ -48,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "id": "eFmlvUGleAtu"
       },
@@ -61,7 +76,8 @@
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.datasets import load_breast_cancer\n",
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.metrics import accuracy_score\n",
+        "from xgboost import XGBClassifier"
       ]
     },
     {
@@ -82,7 +98,7 @@
       "metadata": {
         "id": "lvAGxJa7eZKj"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -101,6 +117,7 @@
         "clf1 = DecisionTreeClassifier(random_state=42)\n",
         "clf2 = SVC(probability=True, random_state=42)  # Es necesario probability=True para stacking\n",
         "clf3 = KNeighborsClassifier(n_neighbors=3)\n",
+        "clf4 = XGBClassifier(eval_metric='logloss')\n",
         "\n",
         "# Entrenamiento y evaluación individual de cada modelo\n",
         "clf1.fit(X_train, y_train)\n",
@@ -113,16 +130,20 @@
         "\n",
         "clf3.fit(X_train, y_train)\n",
         "y_pred3 = clf3.predict(X_test)\n",
-        "print(f\"Accuracy KNN: {accuracy_score(y_test, y_pred3):.2f}\")"
+        "print(f\"Accuracy KNN: {accuracy_score(y_test, y_pred3):.2f}\")\n",
+        "\n",
+        "clf4.fit(X_train, y_train)\n",
+        "y_pred4 = clf4.predict(X_test)\n",
+        "print(f\"Accuracy XGBoost: {accuracy_score(y_test, y_pred3):.2f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Q8CVU5lebIz",
-        "outputId": "11367dff-67e7-426f-8172-8df505749fb8"
+        "outputId": "6ac26f67-98a5-411c-9053-e57d9cce3c89"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +151,8 @@
           "text": [
             "Accuracy Decision Tree: 0.95\n",
             "Accuracy SVM: 0.95\n",
-            "Accuracy KNN: 0.93\n"
+            "Accuracy KNN: 0.93\n",
+            "Accuracy XGBoost: 0.93\n"
           ]
         }
       ]
@@ -151,7 +173,8 @@
         "estimators = [\n",
         "    ('decision_tree', DecisionTreeClassifier(random_state=42)),\n",
         "    ('svm', SVC(probability=True, random_state=42)),\n",
-        "    ('knn', KNeighborsClassifier(n_neighbors=3))\n",
+        "    ('knn', KNeighborsClassifier(n_neighbors=3)),\n",
+        "    ('xgboost', XGBClassifier(eval_metric='logloss'))  # Agregamos XGBoost\n",
         "]\n",
         "\n",
         "# Meta-modelo: Regresión Logística\n",
@@ -172,15 +195,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rw8EN1EEed2o",
-        "outputId": "b874374c-091c-49f5-f5bb-f1a25489413f"
+        "outputId": "afee5db3-8fb8-4fba-9ac5-407a34715d73"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy Stacking: 0.97\n"
+            "Accuracy Stacking: 0.96\n"
           ]
         }
       ]
