Se creó con Colab

--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLTx1nhK+4hNqzh0eQ7DX+",
+      "authorship_tag": "ABX9TyPzAXUHLP0dw+zzwaEQNttd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,8 +63,7 @@
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.datasets import load_breast_cancer\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "from xgboost import XGBClassifier"
+        "from sklearn.metrics import accuracy_score"
       ]
     },
     {
@@ -104,7 +103,6 @@
         "clf1 = DecisionTreeClassifier(random_state=42)\n",
         "clf2 = SVC(probability=True, random_state=42)  # Es necesario probability=True para stacking\n",
         "clf3 = KNeighborsClassifier(n_neighbors=3)\n",
-        "clf4 = XGBClassifier(eval_metric='logloss')\n",
         "\n",
         "# Entrenamiento y evaluación individual de cada modelo\n",
         "clf1.fit(X_train, y_train)\n",
@@ -117,20 +115,16 @@
         "\n",
         "clf3.fit(X_train, y_train)\n",
         "y_pred3 = clf3.predict(X_test)\n",
-        "print(f\"Accuracy KNN: {accuracy_score(y_test, y_pred3):.2f}\")\n",
-        "\n",
-        "clf4.fit(X_train, y_train)\n",
-        "y_pred4 = clf4.predict(X_test)\n",
-        "print(f\"Accuracy XGBoost: {accuracy_score(y_test, y_pred3):.2f}\")"
+        "print(f\"Accuracy KNN: {accuracy_score(y_test, y_pred3):.2f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Q8CVU5lebIz",
-        "outputId": "6ac26f67-98a5-411c-9053-e57d9cce3c89"
+        "outputId": "3e2af0fd-10b0-4326-8d85-918d9946ea00"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,8 +132,7 @@
           "text": [
             "Accuracy Decision Tree: 0.95\n",
             "Accuracy SVM: 0.95\n",
-            "Accuracy KNN: 0.93\n",
-            "Accuracy XGBoost: 0.93\n"
+            "Accuracy KNN: 0.93\n"
           ]
         }
       ]
@@ -160,9 +153,8 @@
         "estimators = [\n",
         "    ('decision_tree', DecisionTreeClassifier(random_state=42)),\n",
         "    ('svm', SVC(probability=True, random_state=42)),\n",
-        "    ('knn', KNeighborsClassifier(n_neighbors=3)),\n",
-        "    ('xgboost', XGBClassifier(eval_metric='logloss'))  # Agregamos XGBoost\n",
-        "]\n",
+        "    ('knn', KNeighborsClassifier(n_neighbors=3))\n",
+        "    ]\n",
         "\n",
         "# Meta-modelo: Regresión Logística\n",
         "stacking_clf = StackingClassifier(\n",
@@ -182,15 +174,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rw8EN1EEed2o",
-        "outputId": "afee5db3-8fb8-4fba-9ac5-407a34715d73"
+        "outputId": "7640e55a-7443-468e-d524-c5132f159c4b"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy Stacking: 0.96\n"
+            "Accuracy Stacking: 0.97\n"
           ]
         }
       ]
