Se creó con Colab

--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOY+n1DkSr0fEgWgXLmwftu",
+      "authorship_tag": "ABX9TyPmu/a/dTwi7eYHVQgAOlso",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -406,7 +406,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Y podemos transformar eso en una predicción de clase:"
+        "Y podemos transformar eso en una predicción de clase y compararlo con la clase real:"
       ],
       "metadata": {
         "id": "3Ce3Zgps1gpi"
@@ -417,36 +417,51 @@
       "source": [
         "# Agregar una nueva columna 'clasificacion' basada en las reglas proporcionadas\n",
         "df_predicciones['clasificacion'] = np.where(df_predicciones['prediccion_meta_modelo'] >= 0.5, 'Positiva', 'Negativa')\n",
+        "df_predicciones['clase_real'] = y_train\n",
         "\n",
         "# Mostrar las primeras filas del DataFrame con la nueva columna de clasificación\n",
-        "print(df_predicciones.head())\n"
+        "print(df_predicciones)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "q2CUSly61Uks",
-        "outputId": "e18cbb51-6c3d-497d-ad13-c6a0dd93cf73"
+        "outputId": "b5f334be-1fee-4968-e069-a03370c588b4"
       },
-      "execution_count": 27,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   DecisionTreeClassifier       SVC  KNeighborsClassifier  \\\n",
-            "0                     1.0  0.972563                   1.0   \n",
-            "1                     0.0  0.000725                   0.0   \n",
-            "2                     1.0  0.976237                   1.0   \n",
-            "3                     1.0  0.964614                   1.0   \n",
-            "4                     1.0  0.976413                   1.0   \n",
+            "     DecisionTreeClassifier       SVC  KNeighborsClassifier  \\\n",
+            "0                       1.0  0.972563              1.000000   \n",
+            "1                       0.0  0.000725              0.000000   \n",
+            "2                       1.0  0.976237              1.000000   \n",
+            "3                       1.0  0.964614              1.000000   \n",
+            "4                       1.0  0.976413              1.000000   \n",
+            "..                      ...       ...                   ...   \n",
+            "450                     1.0  0.976379              1.000000   \n",
+            "451                     1.0  0.957451              1.000000   \n",
+            "452                     1.0  0.909842              1.000000   \n",
+            "453                     0.0  0.404710              0.333333   \n",
+            "454                     1.0  0.957145              1.000000   \n",
             "\n",
-            "   prediccion_meta_modelo clasificacion  \n",
-            "0                0.968974      Positiva  \n",
-            "1                0.023767      Negativa  \n",
-            "2                0.969215      Positiva  \n",
-            "3                0.968446      Positiva  \n",
-            "4                0.969226      Positiva  \n"
+            "     prediccion_meta_modelo clasificacion  clase_real  \n",
+            "0                  0.968974      Positiva           1  \n",
+            "1                  0.023767      Negativa           0  \n",
+            "2                  0.969215      Positiva           1  \n",
+            "3                  0.968446      Positiva           1  \n",
+            "4                  0.969226      Positiva           1  \n",
+            "..                      ...           ...         ...  \n",
+            "450                0.969224      Positiva           1  \n",
+            "451                0.967963      Positiva           1  \n",
+            "452                0.964566      Positiva           1  \n",
+            "453                0.122488      Negativa           0  \n",
+            "454                0.967942      Positiva           1  \n",
+            "\n",
+            "[455 rows x 6 columns]\n"
           ]
         }
       ]
