Se creó con Colab

--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmu/a/dTwi7eYHVQgAOlso",
+      "authorship_tag": "ABX9TyN0meJ3yIVFMTImMYOjtLeU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "id": "eFmlvUGleAtu"
       },
@@ -88,9 +88,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lvAGxJa7eZKj",
-        "outputId": "1b9a9a7a-430a-49bb-b5b1-a7ce6bfd345e"
+        "outputId": "a51d0b68-7ed0-47aa-9a40-e54e53d307c2"
       },
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,7 +100,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 2
         }
       ]
     },
@@ -139,9 +139,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Q8CVU5lebIz",
-        "outputId": "6791ea16-9ccb-44a4-8867-c35fb4a5524d"
+        "outputId": "be71f2b6-f1b1-4a3d-d99c-39eb2723b803"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,9 +191,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rw8EN1EEed2o",
-        "outputId": "b0589d91-0cdf-4e9a-8c62-cc529bee0722"
+        "outputId": "48610f22-ec3f-44d9-88e7-37017dee68ab"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,9 +237,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Znn5eTpeudqi",
-        "outputId": "bdce1e82-778d-45e2-933b-0508a4050221"
+        "outputId": "ca88184b-a334-4573-ea2b-e9d9d7627c62"
       },
-      "execution_count": 20,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,9 +287,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lRByuqoswa1i",
-        "outputId": "ca1d1d13-3aec-457d-c9f5-ec19abdba422"
+        "outputId": "1dff5ce4-9625-4cbe-994a-e06fb37ea78d"
       },
-      "execution_count": 22,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,37 +327,13 @@
         "predicciones_meta_modelo = 1 / (1 + np.exp(-z))\n",
         "\n",
         "# Agregar las predicciones al DataFrame\n",
-        "df_predicciones['prediccion_meta_modelo'] = predicciones_meta_modelo"
+        "df_predicciones['proba_meta_modelo'] = predicciones_meta_modelo"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SnEIV67A0lL1",
-        "outputId": "21e1b792-521c-4ec7-a60e-010035cad7fb"
+        "id": "SnEIV67A0lL1"
       },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   DecisionTreeClassifier       SVC  KNeighborsClassifier  \\\n",
-            "0                     1.0  0.972563                   1.0   \n",
-            "1                     0.0  0.000725                   0.0   \n",
-            "2                     1.0  0.976237                   1.0   \n",
-            "3                     1.0  0.964614                   1.0   \n",
-            "4                     1.0  0.976413                   1.0   \n",
-            "\n",
-            "   prediccion_meta_modelo  \n",
-            "0                0.968974  \n",
-            "1                0.023767  \n",
-            "2                0.969215  \n",
-            "3                0.968446  \n",
-            "4                0.969226  \n"
-          ]
-        }
-      ]
+      "execution_count": 7,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -378,27 +354,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a4zt-fyd1a4L",
-        "outputId": "df8a8da7-0fd7-4bfb-920c-eaeaf7b6bca7"
+        "outputId": "aade9be6-a3c7-4679-967f-7429ffa5ec4f"
       },
-      "execution_count": 26,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   DecisionTreeClassifier       SVC  KNeighborsClassifier  \\\n",
-            "0                     1.0  0.972563                   1.0   \n",
-            "1                     0.0  0.000725                   0.0   \n",
-            "2                     1.0  0.976237                   1.0   \n",
-            "3                     1.0  0.964614                   1.0   \n",
-            "4                     1.0  0.976413                   1.0   \n",
-            "\n",
-            "   prediccion_meta_modelo  \n",
-            "0                0.968974  \n",
-            "1                0.023767  \n",
-            "2                0.969215  \n",
-            "3                0.968446  \n",
-            "4                0.969226  \n"
+            "   DecisionTreeClassifier       SVC  KNeighborsClassifier  proba_meta_modelo\n",
+            "0                     1.0  0.972563                   1.0           0.968974\n",
+            "1                     0.0  0.000725                   0.0           0.023767\n",
+            "2                     1.0  0.976237                   1.0           0.969215\n",
+            "3                     1.0  0.964614                   1.0           0.968446\n",
+            "4                     1.0  0.976413                   1.0           0.969226\n"
           ]
         }
       ]
@@ -416,7 +385,7 @@
       "cell_type": "code",
       "source": [
         "# Agregar una nueva columna 'clasificacion' basada en las reglas proporcionadas\n",
-        "df_predicciones['clasificacion'] = np.where(df_predicciones['prediccion_meta_modelo'] >= 0.5, 'Positiva', 'Negativa')\n",
+        "df_predicciones['clasificacion'] = np.where(df_predicciones['proba_meta_modelo'] >= 0.5, 1, 0)\n",
         "df_predicciones['clase_real'] = y_train\n",
         "\n",
         "# Mostrar las primeras filas del DataFrame con la nueva columna de clasificación\n",
@@ -427,9 +396,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q2CUSly61Uks",
-        "outputId": "b5f334be-1fee-4968-e069-a03370c588b4"
+        "outputId": "ceafdaa1-e81e-4939-b06e-4a7abed98379"
       },
-      "execution_count": 30,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,18 +417,18 @@
             "453                     0.0  0.404710              0.333333   \n",
             "454                     1.0  0.957145              1.000000   \n",
             "\n",
-            "     prediccion_meta_modelo clasificacion  clase_real  \n",
-            "0                  0.968974      Positiva           1  \n",
-            "1                  0.023767      Negativa           0  \n",
-            "2                  0.969215      Positiva           1  \n",
-            "3                  0.968446      Positiva           1  \n",
-            "4                  0.969226      Positiva           1  \n",
-            "..                      ...           ...         ...  \n",
-            "450                0.969224      Positiva           1  \n",
-            "451                0.967963      Positiva           1  \n",
-            "452                0.964566      Positiva           1  \n",
-            "453                0.122488      Negativa           0  \n",
-            "454                0.967942      Positiva           1  \n",
+            "     proba_meta_modelo  clasificacion  clase_real  \n",
+            "0             0.968974              1           1  \n",
+            "1             0.023767              0           0  \n",
+            "2             0.969215              1           1  \n",
+            "3             0.968446              1           1  \n",
+            "4             0.969226              1           1  \n",
+            "..                 ...            ...         ...  \n",
+            "450           0.969224              1           1  \n",
+            "451           0.967963              1           1  \n",
+            "452           0.964566              1           1  \n",
+            "453           0.122488              0           0  \n",
+            "454           0.967942              1           1  \n",
             "\n",
             "[455 rows x 6 columns]\n"
           ]
