Se creó con Colab

--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0meJ3yIVFMTImMYOjtLeU",
+      "authorship_tag": "ABX9TyM4QZaVPnplYaYRp4WG2zKg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -207,9 +207,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ahora vamos a intentar entender que es lo que hace la estrategia de _stacking_.\n",
+        "A partir del accuracy podemos ver que con la estrategia de stacking podemos mejorar la performance de la clasificación."
+      ],
+      "metadata": {
+        "id": "56_5wPsbC9_m"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Entendiendo la estrategia de Stacking\n",
         "\n",
-        "Primero es posible armar un dataframe con las estimaciones de los modelos independientes (árbol de clasificación, máquina vector soporte y vecinos más cercanos:"
+        "Si bien ya hemos podido resolver el pproblema entrenando un modelo de ensamble mediante _stacking_, ahora vamos a intentar entender que está pasando con mayor profundidad.\n",
+        "\n",
+        "Para ello, es posible armar un dataframe con las estimaciones de los modelos independientes (árbol de clasificación, máquina vector soporte y vecinos más cercanos):"
       ],
       "metadata": {
         "id": "vetJnFdEy92B"
@@ -258,7 +269,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "También podemos acceder a los coeficientes de la regresión logística que funciona como __meta-modelo__:"
+        "A su vez, podemos acceder a los coeficientes de la regresión logística que funciona como __meta-modelo__:"
       ],
       "metadata": {
         "id": "robu3OJgzrpd"
